# ChangeLog for x11-themes/xfwm4-themes
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Jun 2007; Christoph Mende <angelos@gentoo.org> ChangeLog:
  Initial ChangeLog
