@@ -1,13 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
+DIST xfwm4-themes-4.5.92.tar.bz2 505442 RMD160 7d758a980657c17e2dd714a325c838ea8ba08848 SHA1 28edcc3187c2679dffaff9b54339904b73161eda SHA256 7bf7156591b9847e63909f359f7d989ea6ba443b43b19fef79e6655167f581b0
+EBUILD xfwm4-themes-4.5.92.ebuild 383 RMD160 82a2a891bd7db794d99d4bde5c7021d475c892b6 SHA1 049ee1d58f00fc5c678075b4576fc6b1acf45c3d SHA256 a5ceee335ec2203435336e69e1962f743598385039ccec584e84978f7a8eae53
 EBUILD xfwm4-themes-9999.ebuild 383 RMD160 82a2a891bd7db794d99d4bde5c7021d475c892b6 SHA1 049ee1d58f00fc5c678075b4576fc6b1acf45c3d SHA256 a5ceee335ec2203435336e69e1962f743598385039ccec584e84978f7a8eae53
-MISC ChangeLog 208 RMD160 a0788f996834c4afe7487ce4dbc0edcfd9e6ab8c SHA1 01ecc0aa88776e622a610dbbd7d75c7caee853a6 SHA256 d7cbabf0ad23198675c64a134f91e3164670f461c69e06e7cdbc87200e29f313
+MISC ChangeLog 351 RMD160 758597879070985aebc01a679fcc2e56e72e33df SHA1 dfc8b10e31f41a2272957c1503b955f83de198e7 SHA256 a0635f95a2aeab4562012bfd5c502cc7de723e0c9da01606249734460a9459df
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkWJFIACgkQKhnDs22gwa9OXQCgmpUj0WeVWSRCEONhuQ0Fz830
-hOcAoKH9GZhbI9Awab7pmXr5ImfVAJAT
-=RjFv
+iEYEARECAAYFAkkdtnUACgkQKhnDs22gwa/hNwCeP/nq+P8yQhd/X0gO+Kw9Naoj
+6tkAniBzX5cPVWG1q3P7o9i1ImOzFMIK
+=/Gnh
 -----END PGP SIGNATURE-----
