@@ -1,6 +1,12 @@
 # ChangeLog for x11-themes/xfwm4-themes
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*xfwm4-themes-4.5.92 (14 Nov 2008)
+
+  14 Nov 2008; Christoph Mende <angelos@gentoo.org>
+  +xfwm4-themes-4.5.92.ebuild:
+  Xfce-4.6 Beta 2 bump
 
   06 Jun 2007; Christoph Mende <angelos@gentoo.org> ChangeLog:
   Initial ChangeLog
